--- a/Budget.Furiax/Budget/wwwroot/css/site.css
+++ b/Budget.Furiax/Budget/wwwroot/css/site.css
@@ -16,23 +16,7 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
-}
-
-#transactionList {
-    border-collapse: collapse; 
-    width: 100%; 
-    padding: 2px; 
-}
-
-    #transactionList th, #transactionList td {
-        padding: 5px; 
-        text-align: center; 
-        border: 1px solid #dddddd;
-    }
-
-    #transactionList th {
-        background-color: #f2f2f2;
+    background-color: rgb(175,225,175,0.4);
     }
 
 /* The Category Modal (background) */
@@ -139,7 +123,13 @@ body {
     }
 #balance {
     border: 2px solid black;
-    padding: 5px;
     font-weight: bold;
-    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#balanceTotal {
+    margin-left: 5px;
+    display: inline;
 }
