--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_Modals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_Modals.cshtml
@@ -1,16 +1,16 @@
-﻿@model MVC.Budget.K_MYR.Models.Category;
+﻿@model MVC.Budget.K_MYR.Models.PostCategory;
 
 <section id="modals">
     <div class="modal fade" id="add-category-modal" tabindex="-1" aria-labelledby="add-category-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="add-category-Label">Add New Post-It</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="add-category-Label">Add Category</h5>
+                    <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="add-category-form" asp-controller="Categories" asp-action="PostCategory" method="POST">
-                        <input type="hidden"asp-for="IncomeId" value="" />
+                        <input type="hidden"asp-for="GroupId" value="" />
                         <div class="form-group">
                             <label asp-for="Name" class="control-label"></label>
                             <input asp-for="Name" class="form-control" />
