--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
@@ -11947,6 +11947,10 @@ body {
   transform: rotate(90deg);
 }
 
+.dashboard {
+  border-radius: var(--bs-border-radius);
+}
+
 .accordion {
   cursor: pointer;
 }
