--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
@@ -57,6 +57,10 @@ body {
     transform: rotate(90deg);
 }
 
+.dashboard {
+    border-radius: var(--bs-border-radius);
+}
+
 .accordion {
     cursor: pointer;
 }
